--- a/resources.qrc
+++ b/resources.qrc
@@ -1,8 +1,10 @@
 <RCC>
   <qresource prefix="icons">
+    <file>images/icons/warning.png</file>
+    <file>images/icons/bg2.png</file>
     <file>images/icons/icon_close.png</file>
-    <file>images/icons/bg.png</file>
     <file>images/icons/icon_maximize.png</file>
+    <file>images/icons/logo.png</file>
     <file>images/icons/icon_minimize.png</file>
     <file>images/icons/icon_restore.png</file>
     <file>images/icons/close.png</file>
